--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>flash card-borsatti</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="assets/style.css">
 </head>
 
 <body>
@@ -21,38 +21,15 @@
                         <p>O Java Script é uma linguagem de programação.</p>
                     </div>
 
-                </div>
             </article>
-
-<article class="cartao">
-    <div class="cartao__conteudo">
-            <h3> Programação </h3>
-                  <div class="cartao__conteudo__pergunta">
-                        <p>O que é CSS?</p>
-                    </div>                        
-                   <div class="cartao__conteudo__resposta">
-                        <p>O CSS é uma linguagem de estilização.</p>
-                     </div>
-                    </div>
-                        
-     </article>
-     <article class="cartao">
-        <div class="cartao__conteudo">
-            <h3> Programação </h3>
-            <div class="cartao__conteudo__pergunta">
-                <p>O que é CSS?</p>
-            </div>                        
-            <div class="cartao__conteudo__resposta">
-                <p>O CSS é uma linguagem de estilização.</p>
-            </div>
-        </div>
-    </article>
         </section>
 
     </main>
     <footer>
         <p>Projeto desenvolvido pela Alura, sem fins lucrativos.</p>
     </footer>
+    <script src="app.js"></script>
+    <script src="perguntas.js"></script>
 </body>
 
 </html>
